# can-link

./: .gitignore  .gitmodules  README.md  Requirementes.md  workspace.code-workspace
.github/: FUNDING.yml
.github/workflows/: build.yml
backend/: .env
backend/glow_bot/: .gitignore  README.md  mix.exs
backend/management_console/: .gitignore  README.md  mix.exs
can_companion/: README.md  pubspec.yaml
can_companion/android/: gradle.properties
can_companion/lib/: main.dart
can_companion/linux/: CMakeLists.txt  my_application.cc
can_companion/web/: index.html  manifest.json
can_companion/windows/: CMakeLists.txt
canscript/: build.zig
canscript/src/: erlcmd.c  lua.zig  main.zig
deleteme/: README.md  mix.exs
deleteme/config/: config.exs  target.exs
deleteme/lib/: ble.ex  deleteme.ex  mix.tasks.reload.ex
deleteme/test/: deleteme_test.exs
docs/: index.html
elixir-gpsd/: .gitignore  README.md  build.zig  mix.exs
elixir-gpsd/lib/: gpsd.ex  pipe.ex
elixir-gpsd/src/: erlcmd.h  main.zig  test.c
elixir-gpsd/test/: class_test.exs
elixir-libiio/: .gitignore  README.md  mix.exs
elixir-libiio/iio_port/: build.zig
elixir-libiio/lib/: iio.ex
elixir-libiio/test/: iio_test.exs
elixir-socket-can/: Makefile  README.md  mix.exs
elixir-socket-can/lib/: socket_can.ex
elixir-socket-can/test/: socket_can_test.exs
firmware/: .formatter.exs  .gitignore  README.md  example.asm  example2.asm  mix.exs  workspace.code-workspace
firmware/bleprph/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/config/: target.exs
firmware/configurator/: .gitignore  index.html  package-lock.json  package.json  preload.js  renderer.js
firmware/esp_fw/: .gitignore  CMakeLists.txt  README.md  fwup.conf  partitions.csv  screenlog.0  sdkconfig  sdkconfig.defaults
firmware/esp_fw/main/: CMakeLists.txt  Kconfig.projbuild  SX1231.c  ble.c  can.c  console.c  console_motor.c  console_regulator.c  console_rgb.c  ini.c  main.c  motor.c  msc.c  pico.c  radio.c  regulator.c  sdcard.c  usb_acm.c  util.c
firmware/esp_fw/main/include/: SX1231.h  ble.h  can.h  console.h  console_motor.h  console_regulator.h  console_rgb.h  motor.h  pico.h  pins.h  radio.h  regulator.h  sdcard.h  usb_acm.h
firmware/lib/: can_link.ex  console.ex  gadget.ex  mix.tasks.reload.ex  pwm.ex  rgb.ex
firmware/neopixel-test/: CMakeLists.txt  example.asm  example2.asm  sdkconfig  sdkconfig.old
firmware/priv/: can-link.ini  test.lua
firmware/radiotester/: platformio.ini
firmware/rp2040_fw/: .gitignore  CMakeLists.txt  README.md  main.c
firmware/rp2040_fw/include/: command.h  logging.h  regulator.h  rgb.h  status_led.h  ws2812.h
firmware/rp2040_fw/src/: command.c  main.c  regulator.c  rgb.c  status_led.c  ws2812.c
firmware/spect/: .gitignore  0001-Fix-build-for-esp32s3.patch  CMakeLists.txt  cloc.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/spect/components/led_strip/: led_strip.c
firmware/spect/components/spect-ble/: CMakeLists.txt  bleprph.h  gatt_srv.h  gatt_svr.c  spect-ble.c
firmware/spect/components/spect-ble/include/: spect-ble.h
firmware/spect/components/spect-config/: .gitignore  CMakeLists.txt  spect-config.c
firmware/spect/components/spect-config/include/: spect-config.h
firmware/spect/components/spect-radio/: CMakeLists.txt  spect-radio.c  sx1231.c
firmware/spect/components/spect-radio/include/: spect-radio.h  sx1231.h
firmware/spect/components/spect-regulator/: CMakeLists.txt  spect-regulator.c
firmware/spect/components/spect-regulator/include/: spect-regulator.h
firmware/spect/components/spect-rgb-channel/: CMakeLists.txt  chase.c  pulse.c  rainbow.c  spect-rgb-channel.c
firmware/spect/components/spect-rgb-channel/include/: chase.h  pulse.h  rainbow.h  spect-rgb-channel.h
firmware/spect/flash_image/: config.db
firmware/spect/include/: filesystem.h  msc.h  pins.h  usb_acm.h  util.h
firmware/spect/main/: CMakeLists.txt  Kconfig.projbuild  filesystem.c  idf_component.yml  msc.c  spect.c  usb_acm.c
firmware/twai_self_test/: sdkconfig  sdkconfig.old
haltech_link/: README.md  mix.exs  ms-can-proto.csv
haltech_link/config/: config.exs  target.exs
haltech_link/lib/: console.ex  haltech_link.ex  megasquirt_can_protocol.ex  rgb.ex
haltech_link/test/: can_link_test.exs  haltech_link_test.exs
hardware/: #auto_saved_files#  .gitignore  .~lock.CONEPROJ.csv#  CONEPROJ.csv  CONEPROJ.kicad_pcb  CONEPROJ.kicad_prl  CONEPROJ.kicad_pro  CONEPROJ.kicad_sch  CONEPROJ.xml  OSD335x.kicad_sch  README.md  TODO.md  bq29209.bak  bq29209.kicad_sym  canlink.kicad_prl  canlink.kicad_pro  canlink.kicad_sch  fp-info-cache  fp-lib-table  gen_phytec.kicad_sym  mp2615.bak  pins.txt  pytec_generator.exs  sym-lib-table
hardware/3dmodels/: 0533980671--3DModel-STEP-361473.STEP  1468-0.step  DTM06-12SA--3DModel-STEP-1.STEP  QFN-68-1EP_8x8mm_P0.4mm_EP5.2x5.2mm.wrl  SM02BD-8723BS.wrl  UC-31PFFP-QS8001.step  c-eec-5x650b-c-3d.stp
hardware/carrier/: CONEPROJ.csv  CONEPROJ.kicad_pcb  CONEPROJ.kicad_pro  CONEPROJ.kicad_sch  CONEPROJ.xml  fp-lib-table  sym-lib-table
hardware/companion/: companion.kicad_pro  companion.kicad_sch  sym-lib-table
hardware/davecu2/: AnalogInput.kicad_sch  CAN-Bus.kicad_sch  Connectors.kicad_sch  Power.kicad_sch  STM32F723ZET6.kicad_sch  Wideband.kicad_sch  davecu2.kicad_pcb  davecu2.kicad_pro  davecu2.kicad_sch
hardware/daxproj/: daxproj.kicad_pcb  daxproj.kicad_pro  daxproj.kicad_sch
hardware/epas-controller/: epas-controller.kicad_pcb  epas-controller.kicad_sch
imx6uz-dev/: .gitignore  fp-info-cache  fp-lib-table  nano.kicad_pcb  nano.kicad_prl  nano.kicad_pro  nano.kicad_sch  nano_clkctl.kicad_sch  nano_dbg.kicad_sch  nano_power.kicad_sch  nano_usb.kicad_sch  periph2.kicad_sch  wifi_bt.kicad_sch
interface/companion/: .env  (+4 more)
(+653 files in other folders)
