idf_component_register(SRCS 
                          "ble.c" 
                          "can.c" 
                          "console_motor.c"
                          "console_regulator.c"
                          "console_rgb.c"
                          "console.c"
                          "main.c" 
                          "motor.c" 
                          "pico.c" 
                          "regulator.c"
                          "sdcard.c" 
                          "SX1231.c" 
                    INCLUDE_DIRS "." "include")
